# ndkbinder-rs

./: Cargo.toml  build.rs  wrapper.h
src/: binder.rs  class.rs  lib.rs  parcel.rs  service_manager.rs  status.rs  sys.rs  test.rs
